# processing_cityjson

./: CMakeLists.txt  README.md
data/: The report of GEO1004.md  cube.city.json
src/: definitions.h  geomtools.cpp  geomtools.h  main.cpp
